Modify site styles, remove self-link on Africa quiz, fix tooltip flicker

--- a/quizzes/quiz-styles.css
+++ b/quizzes/quiz-styles.css
@@ -181,6 +181,7 @@ main {
     padding: 5px;
     background-color: var(--primary-color);
     border-radius: 8px;
+    pointer-events: none;
 }
 
 .tooltip-div span {
